--- a/src/components/BackgroundContainer/Background.css
+++ b/src/components/BackgroundContainer/Background.css
@@ -31,6 +31,7 @@
 
 .web-logo {
   transform: translateY(-35vh);
+  max-width: 100vw;
 }
 
 .landing-btns {
@@ -61,9 +62,9 @@
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 426px) {
+@media screen and (max-width: 425.5px) {
   .landing-container {
-    background-image: url("../../assets/landing/bg_landing.png");
+    /* background-image: url("../../assets/landing/bg_landing.png"); */
     background-repeat: no-repeat;
     background-size: 100vw 110vh;
     background-position: center;
