--- a/src/components/OurPartners/OurPartners.css
+++ b/src/components/OurPartners/OurPartners.css
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: center;
   width: 551.02px;
+  max-width: 100%;
   height: 40px;
   background-image: 
   radial-gradient(rgba(107, 192, 254, 0.35),rgba(107, 192, 254, 0));
